chore: add gitignore .

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ nohup.out
 files/driver/windows/chromedriver.exe
 files/configs/nhiss_cfg.py
 files/configs/nhiss_cfg_geunu.py
+nhiss/configs/nhiss_cfg.py
+hira/config.py
