--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 requests==2.25.1
 selenium==3.141.0
+certifi==2021.5.30
+chardet==4.0.0
+httplib2==0.19.1
+idna==2.10
+pyparsing==2.4.7
+requests==2.25.1
+selenium==3.141.0
+urllib3==1.26.6
