--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 requests==2.25.1
 selenium==3.141.0
 certifi==2021.5.30
+chromedriver-autoinstaller==0.3.1
 chardet==4.0.0
 httplib2==0.19.1
 idna==2.10
