--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.25.1
-selenium==3.141.0
+selenium==4.1.3
 certifi==2021.5.30
 chromedriver-autoinstaller==0.3.1
 chardet==4.0.0
@@ -7,5 +7,5 @@ httplib2==0.19.1
 idna==2.10
 pyparsing==2.4.7
 requests==2.25.1
-selenium==3.141.0
 urllib3==1.26.6
+webdriver-manager==3.5.4
