--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,19 @@ pyparsing==2.4.7
 requests==2.25.1
 urllib3==1.26.6
 webdriver-manager==3.5.4
+apispec==4.3.0
+apispec-webframeworks==0.5.2
+flask-compress==1.10.1
+flask_cors==3.0.10
+Fabric3==1.14.post1
+Flask==1.1.2
+flask-apispec==0.11.0
+gunicorn==20.1.0
+marshmallow==3.10.0
+pytest==6.2.5
+pytest-cov==2.11.1
+pyyaml==6.0
+webargs==7.0.1
+Jinja2==3.0.1
+itsdangerous==2.0.1
+Werkzeug==2.0.1
