--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Fabric3==1.14.post1
 Flask==1.1.2
 flask-apispec==0.11.0
 gunicorn==20.1.0
-marshmallow==3.10.0
+marshmallow==3.15.0
 pytest==6.2.5
 pytest-cov==2.11.1
 pyyaml==6.0
@@ -25,3 +25,5 @@ webargs==7.0.1
 Jinja2==3.0.1
 itsdangerous==2.0.1
 Werkzeug==2.0.1
+redis==3.5.3
+celery==4.4.7
